
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tooljob"
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
    'typing-extensions >=4.2.0, <5',
    'tqdm >=4.65.0, <5',
    'toolstr >=0.9.2, <0.10',
    'tooltime >=0.2.9, <0.3',
]

[tool.mypy]
python_version = "3.9"
strict = true
implicit_reexport = true
files = ["tooljob"]

